# Seals-NumericCalculus

./: .gitignore  Pipfile  README.md  build.py  makefile  pyproject.toml  setup.py  setup_cython.py  yoshi-seals1.3.3-1.tar.xz  yoshi-seals1.3.3.1.tar.xz  yoshi-seals1.3.tar.xz
.github/workflows/: python-pypi-test-upload.yml  python-pypi-upload.yml  python-test-and-build.yml  python-test.yml
Older Versions/: yoshi-seals1.3.1.tar.xz  yoshi-seals1.3.2.tar.xz  yoshi-seals1.3.3.tar.xz
Older Versions/yoshi-seals1.2/: README.md  setup.py
Older Versions/yoshi-seals1.2.1/: setup.py
Older Versions/yoshi-seals1.3.1/: setup.py
Older Versions/yoshi-seals1.3.2/: setup.py
Older Versions/yoshi-seals1.3.3/: setup.py
Source Code - Seals/process/: process.py
Source Code - Seals/write/: __init__.py
test/: test_process.py
yoshi-seals/eigen/: eigen.py
yoshi-seals/insert/: __init__.py  insert.py
yoshi-seals/process/: process.py
yoshi-seals/write/: write.py
yoshi-seals1.3/: README.md
yoshi-seals1.3.1/yoshi_seals.egg-info/: PKG-INFO
yoshi-seals1.3.2/yoshi_seals.egg-info/: PKG-INFO
yoshi-seals1.3.3/: README.md
yoshi-seals1.3.3-1/: README.md  setup.py
yoshi-seals1.3.3-1/yoshi_seals.egg-info/: PKG-INFO
yoshi-seals1.3.3.1/: setup.py
yoshi-seals1.3.3.1/yoshi_seals.egg-info/: PKG-INFO
yoshi-seals1.3/Seals/: __init__.py
yoshi-seals1.3/yoshi_seals.egg-info/: PKG-INFO  SOURCES.txt
yoshi_seals/eigen/: eigen.py
yoshi_seals/insert/: insert.py
yoshi_seals/process/: __init__.py  process.pyx
yoshi_seals/scan/: scan.py
yoshi_seals/shared/: array.pxd  (+1 more)
(+27 files in other folders)
