[tool.poetry]
name = "yoshi-seals"
version = "0.0.0"
description = ""
authors = ["Vitor Hideyoshi Nakazone Batista <vitor.h.n.batista@gmail.com>"]
license = "GPL-2.0-only"
packages = [
    { include = "yoshi_seals", from = "." },
]
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
cython = "^3.0.10"


[tool.poetry.group.dev.dependencies]
setuptools = "^70.1.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0", "setuptools>=70.1.0", "cython>=3.0.10", "numpy>=2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
